# png-optimizer

./: .gitignore  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: file_commands.rs  image_commands.rs  mod.rs  preview_commands.rs  watch_commands.rs
src-tauri/src/models/: mod.rs
src-tauri/src/processing/: decoder.rs  mod.rs  optimizer.rs  quantizer.rs  resizer.rs
src/components/layout/: ActionBar.tsx  SettingsBar.tsx
src/components/preview/: PreviewPanel.tsx
src/components/queue/: DropZone.tsx  QueuePanel.tsx
src/i18n/: en.json  index.ts  ja.json
src/lib/: constants.ts  storage.ts  tauri.ts  types.ts
src/styles/: globals.css
