[package]
name = "png-optimizer"
version = "0.1.0"
description = "Cross-platform PNG image optimizer"
authors = ["Rare2Rare"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
oxipng = { version = "9", default-features = false, features = ["parallel", "zopfli"] }
imagequant = "4"
base64 = "0.22"
walkdir = "2"
rayon = "1"
trash = "5"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
